--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 	<ul class="list-inline">
 		<li>
-		Welcome, <%= current_user.username %>
+		<div class="welcomemsg hidden-md">Welcome, <%= current_user.username %></div>
 		</li>
 		<!--li>
 		<%= link_to('Edit registration', edit_user_registration_path) %>
